--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-site",
   "version": "0.1.0",
-  "homepage": "https://kristek1104.github.io/testReact/",
   "private": true,
+  "homepage": "https://kristek1104.github.io/testReact/#/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
