--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kristek1104.github.io/testReact/#/",
+  "homepage": "https://kristek1104.github.io/testReact",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
